Added support for two byte master->player communicaation

--- a/player/c++/makefile
+++ b/player/c++/makefile
@@ -1,2 +1,4 @@
-all: engine.cpp engine.hpp notes.hpp
+all: engine
+
+engine: engine.cpp engine.hpp notes.hpp
 	g++ engine.cpp -o engine -lwiringPi -std=c++11 -lpthread
